--- a/Checkpoint_Group022-SP23.ipynb
+++ b/Checkpoint_Group022-SP23.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "The idea of success to a lot of people is through financial accomplishments and one of the most important things for people to value themselves is by how much they make annually. The goal of this project is to identify whether a person with specific metrics will make more or less than $50,000 a year. The data used will be a kaggle dataset showing features that contribute to an individual's income. This would include features such as gender, race, occupation, and all the information would have to classify the individual. There are certain features that don't have numerical values such as race or occupation so we can one hot encode those features. With this data, we will perform some exploratory data analysis on these features and see if there are biases that we can exclude such as a feature that measures higher education which already is statistically known to be heavily correlated with income. The reason why we would do this is to determine what other not so well known features would attribute to classifying income. Once all of that is done, we will use our clean dataset to classify people who make more or less than 50,000 annually.Performance of a model is measured by accuracy and f1-score."
+    "The goal of this project is to identify whether a person with specific metrics will make more or less than $50,000 a year. The data used will be a kaggle dataset showing features that contribute to an individual's income. This would include features such as gender, race, occupation, and all the information would have to classify the individual. There are certain features that don't have numerical values such as race or occupation so we can one hot encode those features. With this data, we will perform some exploratory data analysis on these features and see if there are biases that we can exclude such as a feature that measures higher education which already is statistically known to be heavily correlated with income. The reason why we would do this is to determine what other not so well known features would attribute to classifying income. Once all of that is done, we will use our clean dataset to classify people who make more or less than 50,000 annually. Performance of a model is measured by accuracy and f1-score."
    ]
   },
   {
@@ -31,7 +31,7 @@
    "source": [
     "# Background\n",
     "\n",
-    "According to the United States government <a name=\"incomeImportance\"></a>[<sup>[1]</sup>](#importance-income), accurate survey data about income is hard to come by. There's plenty of issues in reporting data such as difficulty in understanding income questions, different interpretations of income questions, and other factors that make income reporting not as reliable as one might think. Having accurate income data is important as income data is an important metric in determining health related quality of life<a name=\"incomeHealth\"></a>[<sup>[2]</sup>](#health-income). Furthermore, a person reaches about $50k, they can be classified as middle class.<a name=\"midIncome\"></a>[<sup>[3]</sup>](#mid-income)."
+    "According to the United States government <a name=\"incomeImportance\"></a>[<sup>[1]</sup>](#importance-income), accurate survey data about income is hard to come by. There's plenty of issues in reporting data such as difficulty in understanding income questions, different interpretations of income questions, and other factors that make income reporting not as reliable as one might think. Having accurate income data is important as income data is an important metric in determining health related quality of life<a name=\"incomeHealth\"></a>[<sup>[2]</sup>](#health-income). The idea of success to a lot of people is through financial accomplishments and one of the most important things for people to value themselves is by how much they make annually. Furthermore, a person reaches about $50k, they can be classified as middle class.<a name=\"midIncome\"></a>[<sup>[3]</sup>](#mid-income)."
    ]
   },
   {
@@ -1086,6 +1086,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In both the linear regression and SVM models, the precision/recall/f1 scores are great for <=\\\\$50k (around the 90\\% range) and not as good for >\\\\$50k (55-70\\%). This could be from the difference in support (<=\\\\$50k has 3x more datapoints), which could be causing the model to just predict <=\\\\$50k more often. The accuracy is relatively high at 84\\%, which could be due to being able to predict <=\\\\$50k very well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Ethics & Privacy"
    ]
   },
@@ -1107,9 +1114,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* *Respond to messages on Discord in a timely (preferably no more than 24 hrs) manner*\n",
-    "* *Do the work assigned to you*\n",
-    "* *Come to and participate in meetings*"
+    "* Respond to messages on Discord in a timely (preferably no more than 24 hrs) manner\n",
+    "* Do the work assigned to you\n",
+    "* Come to and participate in meetings\n",
+    "* Notify the group if last minute issues come up"
    ]
   },
   {
@@ -1142,13 +1150,6 @@
     "<a name=\"mid-income\"></a>3.[^](#midIncome): https://money.usnews.com/money/personal-finance/family-finance/articles/where-do-i-fall-in-the-american-economic-class-system<br>\n",
     "<a name=\"ucinote\"></a>4.[^](#uci): http://archive.ics.uci.edu/ml/datasets/Adult"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
